--- a/templates/WebApp/chart_from_ClimateSERV.html
+++ b/templates/WebApp/chart_from_ClimateSERV.html
@@ -62,7 +62,7 @@
                         <h6 class="m-0 font-weight-bold text-primary">About ClimateSERV</h6>
                     </div>
                     <div class="card-body">
-                        <div class="text-left text-dark">
+                        <div class="text-left">
                             SERVIR has created a user-friendly, web-based tool -- ClimateSERV -- that provides three
                             important datasets together in one system to help decision-makers in SERVIR's data-sparse
                             regions
