--- a/templates/WebApp/chart_from_netCDF.html
+++ b/templates/WebApp/chart_from_netCDF.html
@@ -100,7 +100,7 @@
                         <h6 class="m-0 font-weight-bold text-primary">About netCDF file</h6>
                     </div>
                     <div class="card-body">
-                        <div class="text-left text-dark">
+                        <div class="text-left">
                             NetCDF (network Common Data Form) is a file format for storing multidimensional scientific
                             data (variables) such as temperature,
                             humidity, pressure, wind speed, and direction. Each of these variables can be displayed
