--- a/templates/WebApp/map_fixedsize.html
+++ b/templates/WebApp/map_fixedsize.html
@@ -252,7 +252,7 @@
                         <h6 class="m-0 font-weight-bold text-primary">About WMS</h6>
                     </div>
                     <div class="card-body">
-                        <div class="text-left text-dark">
+                        <div class="text-left">
                             WMS stands for web map services. This is one very common mechanism to
                             show geospatial content. It is a standard recongized by the Open Geospatial
                             Consortium.
