--- a/templates/WebApp/map_chart.html
+++ b/templates/WebApp/map_chart.html
@@ -126,7 +126,7 @@
                  aria-labelledby="headingMC" data-bs-parent="#mc_tab_container">
                 <div class="accordion-body">
                     <div id="mc_tabs">
-                        <div class="">
+                        <div class="container mt-3 outer-tabs">
                             <ul class="m-0 nav nav-fill nav-justified nav-tabs" id="mc_tab_list"
                                 role="tablist">
                                 <li class="nav-item" role="presentation">
