fix fullscreen alignment

--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -54,7 +54,7 @@
             <div id="mySidenav" class="sidenav">
                 <div class="map_control_style">
                     <label id="control_label">Map Control</label>
-                    <a href="javascript:void(0)" onclick="closeNav()"> &times;</a>
+                    <a href="javascript:void(0)" onclick="closeNav()" class="close-panel"> &times;</a>
                 </div>
                 <!-- Map Control -->
                 <!-- This is an side panel that has two collapsible tabs - Layers and Basemaps. -->
