gee padding fix

--- a/templates/WebApp/map_from_GEE.html
+++ b/templates/WebApp/map_from_GEE.html
@@ -86,7 +86,7 @@
                                      aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <div>
-                                            <div class="container mt-3 outer-tabs">
+                                            <div class="p-2 mt-3 outer-tabs">
                                                 {#                                                container mt-3#}
                                                 <ul class="m-0 nav nav-fill nav-justified nav-tabs"
                                                     id="gee_tab_list" role="tablist">
@@ -124,7 +124,7 @@
 
                                                 <div class="border-grey bg-white tab-content" id="layer_tab_content_gee"
                                                 >
-                                                    <div class="tab-pane active  pt-2 ml-2" id="layers"
+                                                    <div class="tab-pane active  pt-2" id="layers"
                                                          role="tabpanel"
                                                          aria-labelledby="layers-tab"><p>
                                                         <label class="form-check-label  w-75"
@@ -181,7 +181,7 @@
                                                     </div>
                                                     <!-- Tab pane: Basemaps -->
                                                     <!-- This tab is used when there is a need to change basemaps. The basemaps used are present in basemaps.js -->
-                                                    <div class="tab-pane  h-100 pt-2 ml-2" id="basemaps_gee" role="tabpanel"
+                                                    <div class="tab-pane  h-100 pt-2" id="basemaps_gee" role="tabpanel"
                                                          aria-labelledby="basemaps_gee-tab">
                                                         <div class="h-100 text-center">
                                                             <div class=" pos d-block">
