--- a/templates/WebApp/map_fullscreen.html
+++ b/templates/WebApp/map_fullscreen.html
@@ -134,23 +134,22 @@
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
                              data-bs-parent="#accordionExample">
                             <div class="accordion-body" id="basemaps" aria-labelledby="profile-tab">
-                                <div class="card-body text-center">
-                                    <div class="row row-centered pos">
-                                        <div class="col-sm-6">
+                                <div class="text-center">
+                                        <div class="map-thumb-full">
                                             <a class="basemap_img" id="osm" href="#"
                                                onclick="add_basemap(this.id);"><img
                                                     src="{% static 'images/basemaps/osm.png' %}" alt="img1"
                                                     class="img-thumbnail">
                                             </a>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="map-thumb-full">
                                             <a class="basemap_img" id="topo" href="#"
                                                onclick="add_basemap(this.id);"><img
                                                     src="{% static 'images/basemaps/topo.png' %}" alt="img1"
                                                     class="img-thumbnail">
                                             </a>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="map-thumb-full">
                                             <a class="basemap_img" id="gsatellite" href="#"
                                                onclick="add_basemap(this.id);"><img
                                                     src="{% static 'images/basemaps/gsatellite.png' %}" alt="img1"
@@ -158,33 +157,34 @@
                                             </a>
                                         </div>
 
-                                        <div class="col-sm-6">
+                                        <div class="map-thumb-full">
                                             <a class="basemap_img" id="satellite" href="#"
                                                onclick="add_basemap(this.id);"><img
                                                     src="{% static 'images/basemaps/satellite.png' %}" alt="img1"
                                                     class="img-thumbnail">
                                             </a>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="map-thumb-full">
                                             <a class="basemap_img" id="terrain" href="#"
                                                onclick="add_basemap(this.id);"><img
                                                     src="{% static 'images/basemaps/terrain.png' %}" alt="img1"
                                                     class="img-thumbnail">
                                             </a>
                                         </div>
-                                        <div class="col-sm-6">
+                                        <div class="map-thumb-full">
                                             <a class="basemap_img" id="delorme" href="#"
                                                onclick="add_basemap(this.id);"><img
                                                     src="{% static 'images/basemaps/delorme.png' %}" alt="img1"
                                                     class="img-thumbnail">
                                             </a>
                                         </div>
-                                    </div>
+
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+                <br>
                 <br>
                 <div class="m-auto w-75 text-center">
                     <button type="button" class="btn btn-info" data-bs-toggle="modal"
