--- a/templates/WebApp/map_chart.html
+++ b/templates/WebApp/map_chart.html
@@ -167,7 +167,7 @@
 
                                     <p>
 
-                                        <label class="form-check-label mt-2 w-75"
+                                        <label class="form-check-label w-75"
                                                for="chirps"><input
                                                 class="form-check-input"
                                                 id="chirps" type="checkbox"/>CHIRPS
@@ -193,7 +193,7 @@
                                             for="opacity_chirps"
                                             id="chirps_opacity"></label>
                                     <p>
-                                        <label class="form-check-label  mt-2 w-75"
+                                        <label class="form-check-label w-75"
                                                for="esi"> <input class="form-check-input"
                                                                  id="esi" type="checkbox"/>ESI
                                             Layer</label>
@@ -220,7 +220,7 @@
                                 </div>
                                 <!-- Tab pane: Basemaps -->
                                 <!-- This tab is used when there is a need to change basemaps. The basemaps used are present in basemaps.js -->
-                                <div class="tab-pane h-100 pt-3" id="basemaps" role="tabpanel"
+                                <div class="tab-pane h-100 pt-2" id="basemaps" role="tabpanel"
                                      aria-labelledby="basemaps-tab">
                                     <div class="h-100 text-center">
                                         <div class=" pos d-block">
