--- a/templates/WebApp/app_base.html
+++ b/templates/WebApp/app_base.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     {% load static %}
+    {% load socialaccount %}
+    {% load i18n %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -107,11 +109,13 @@
                                     <a class="nav-link dropdown-toggle" href="#" role="button"
                                        data-bs-toggle="dropdown">{{ user.username }} </a>
                                     <ul class="dropdown-menu" id="details" style="margin-top: 3vh">
-                                        <li><a class="dropdown-item" href="/accounts/logout/?next={{ request.path }}">Log
+                                        <li><a class="dropdown-item"
+                                               href="{% url 'account_logout' %}?next={{ request.path }}">Log
                                             Out</a></li>
                                     </ul>
                                 {% else %}
-                                    <a class="nav-link" href="/accounts/google/login/?next={{ request.path }}">
+                                    <a class="nav-link"
+                                       href="{% provider_login_url 'google' %}?next={{ request.path }}">
                                         Login
                                     </a>
                                 {% endif %}
